Part2/Exercise2.02/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: files-storage
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: project
          image: sushashu/project:v1.0
          volumeMounts:
          - name: files-storage
            mountPath: /usr/src/app/files
