Part2/Exercise2.02/manifests/service-todos.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
