Part2/Exercise2.02/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
spec:
  type: ClusterIP
  selector:
    app: project
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
